# xoroshirocpp

./: .gitignore  README.md  bycl.bat  clang-mac.txt  clang.sh  eval_g10_mt.sh  eval_g10_pp.sh  eval_g10_ss.sh  eval_g10_xpp.sh  eval_g10_xs128.sh  eval_g10_xss.sh  g++-mac.txt  g10.sh  gcc.sh  rposrp.txt  ubuntu64rp.txt  win.txt
eval/: CMakeLists.txt  mid_crush.c  run.rb
graph/: data.csv  eval_result.rb  main.py  makecsv.rb
src/: eval.c  eval_mt.cpp  eval_pp.cpp  eval_ss.cpp  eval_xpp.cpp  eval_xs128.cpp  eval_xss.cpp  run.cpp  sample.cpp  xoroshiro.h  xorshift128.h  xoshiro.h
